--- a/docs/documentation/components/nav.html
+++ b/docs/documentation/components/nav.html
@@ -53,20 +53,20 @@ doc-subtab: nav
 {% capture nav_example %}
 <nav class="nav">
   <div class="nav-left">
-    <a class="nav-item">
-      <img src="{{ site.url }}/images/bulma-logo.png" alt="Bulma logo">
+    <a class="nav-item" href="#">
+      <img src="{{ site.url }}/images/bulma-logo.png" alt="Bulma">
     </a>
   </div>
 
   <div class="nav-center">
     <a class="nav-item">
       <span class="icon">
-        <i class="fab fa-github"></i>
+        <i class="fas fa-github" aria-hidden="true"></i>
       </span>
     </a>
     <a class="nav-item">
       <span class="icon">
-        <i class="fab fa-twitter"></i>
+        <i class="fas fa-twitter" aria-hidden="true"></i>
       </span>
     </a>
   </div>
@@ -95,9 +95,9 @@ doc-subtab: nav
     <div class="nav-item">
       <div class="field is-grouped">
         <p class="control">
-          <a class="button" >
+          <a class="button">
             <span class="icon">
-              <i class="fab fa-twitter"></i>
+              <i class="fas fa-twitter" aria-hidden="true"></i>
             </span>
             <span>Tweet</span>
           </a>
@@ -105,7 +105,7 @@ doc-subtab: nav
         <p class="control">
           <a class="button is-primary">
             <span class="icon">
-              <i class="fas fa-download"></i>
+              <i class="fas fa-download" aria-hidden="true"></i>
             </span>
             <span>Download</span>
           </a>
@@ -145,9 +145,9 @@ doc-subtab: nav
   <div class="container">
     <div class="nav-left">
       <a class="nav-item">
-        <img src="{{ site.url }}/images/bulma-logo.png" alt="Bulma logo">
+        <img src="{{ site.url }}/images/bulma-logo.png" alt="Bulma">
       </a>
-      <a class="nav-item is-tab is-hidden-mobile is-active">Home</a>
+      <a class="nav-item is-tab is-hidden-mobile is-active" aria-current="page">Home</a>
       <a class="nav-item is-tab is-hidden-mobile">Features</a>
       <a class="nav-item is-tab is-hidden-mobile">Pricing</a>
       <a class="nav-item is-tab is-hidden-mobile">About</a>
@@ -158,13 +158,13 @@ doc-subtab: nav
       <span></span>
     </span>
     <div class="nav-right nav-menu">
-      <a class="nav-item is-tab is-hidden-tablet is-active">Home</a>
+      <a class="nav-item is-tab is-hidden-tablet is-active" aria-current="page">Home</a>
       <a class="nav-item is-tab is-hidden-tablet">Features</a>
       <a class="nav-item is-tab is-hidden-tablet">Pricing</a>
       <a class="nav-item is-tab is-hidden-tablet">About</a>
       <a class="nav-item is-tab">
         <figure class="image is-16x16" style="margin-right: 8px;">
-          <img src="{{site.url}}/images/jgthms.png">
+          <img src="{{site.url}}/images/jgthms.png" alt="">
         </figure>
         Profile
       </a>
