--- a/docs/documentation/components/tabs.html
+++ b/docs/documentation/components/tabs.html
@@ -43,25 +43,25 @@ doc-subtab: tabs
   <ul>
     <li class="is-active">
       <a>
-        <span class="icon is-small"><i class="fas fa-image"></i></span>
+        <span class="icon is-small"><i class="fas fa-image" aria-hidden="true"></i></span>
         <span>Pictures</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-music"></i></span>
+        <span class="icon is-small"><i class="fas fa-music" aria-hidden="true"></i></span>
         <span>Music</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-film"></i></span>
+        <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span>
         <span>Videos</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-file-alt"></i></span>
+        <span class="icon is-small"><i class="fas fa-file-text-o" aria-hidden="true"></i></span>
         <span>Documents</span>
       </a>
     </li>
@@ -107,25 +107,25 @@ doc-subtab: tabs
   <ul>
     <li class="is-active">
       <a>
-        <span class="icon is-small"><i class="fas fa-image"></i></span>
+        <span class="icon is-small"><i class="fas fa-image" aria-hidden="true"></i></span>
         <span>Pictures</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-music"></i></span>
+        <span class="icon is-small"><i class="fas fa-music" aria-hidden="true"></i></span>
         <span>Music</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-film"></i></span>
+        <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span>
         <span>Videos</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-file-alt"></i></span>
+        <span class="icon is-small"><i class="fas fa-file-text-o" aria-hidden="true"></i></span>
         <span>Documents</span>
       </a>
     </li>
@@ -138,25 +138,25 @@ doc-subtab: tabs
   <ul>
     <li class="is-active">
       <a>
-        <span class="icon is-small"><i class="fas fa-image"></i></span>
+        <span class="icon is-small"><i class="fas fa-image" aria-hidden="true"></i></span>
         <span>Pictures</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-music"></i></span>
+        <span class="icon is-small"><i class="fas fa-music" aria-hidden="true"></i></span>
         <span>Music</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-film"></i></span>
+        <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span>
         <span>Videos</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-file-alt"></i></span>
+        <span class="icon is-small"><i class="fas fa-file-text-o" aria-hidden="true"></i></span>
         <span>Documents</span>
       </a>
     </li>
@@ -200,20 +200,20 @@ doc-subtab: tabs
   <ul>
     <li>
       <a>
-        <span class="icon"><i class="fas fa-angle-left"></i></span>
+        <span class="icon"><i class="fas fa-angle-left" aria-hidden="true"></i></span>
         <span>Left</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon"><i class="fas fa-angle-up"></i></span>
+        <span class="icon"><i class="fas fa-angle-up" aria-hidden="true"></i></span>
         <span>Up</span>
       </a>
     </li>
     <li>
       <a>
         <span>Right</span>
-        <span class="icon"><i class="fas fa-angle-right"></i></span>
+        <span class="icon"><i class="fas fa-angle-right" aria-hidden="true"></i></span>
       </a>
     </li>
   </ul>
@@ -225,25 +225,25 @@ doc-subtab: tabs
   <ul>
     <li class="is-active">
       <a>
-        <span class="icon is-small"><i class="fas fa-image"></i></span>
+        <span class="icon is-small"><i class="fas fa-image" aria-hidden="true"></i></span>
         <span>Pictures</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-music"></i></span>
+        <span class="icon is-small"><i class="fas fa-music" aria-hidden="true"></i></span>
         <span>Music</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-film"></i></span>
+        <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span>
         <span>Videos</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-file-alt"></i></span>
+        <span class="icon is-small"><i class="fas fa-file-text-o" aria-hidden="true"></i></span>
         <span>Documents</span>
       </a>
     </li>
@@ -256,25 +256,25 @@ doc-subtab: tabs
   <ul>
     <li class="is-active">
       <a>
-        <span class="icon is-small"><i class="fas fa-image"></i></span>
+        <span class="icon is-small"><i class="fas fa-image" aria-hidden="true"></i></span>
         <span>Pictures</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-music"></i></span>
+        <span class="icon is-small"><i class="fas fa-music" aria-hidden="true"></i></span>
         <span>Music</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-film"></i></span>
+        <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span>
         <span>Videos</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-file-alt"></i></span>
+        <span class="icon is-small"><i class="fas fa-file-text-o" aria-hidden="true"></i></span>
         <span>Documents</span>
       </a>
     </li>
@@ -287,25 +287,25 @@ doc-subtab: tabs
   <ul>
     <li class="is-active">
       <a>
-        <span class="icon is-small"><i class="fas fa-image"></i></span>
+        <span class="icon is-small"><i class="fas fa-image" aria-hidden="true"></i></span>
         <span>Pictures</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-music"></i></span>
+        <span class="icon is-small"><i class="fas fa-music" aria-hidden="true"></i></span>
         <span>Music</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-film"></i></span>
+        <span class="icon is-small"><i class="fas fa-film" aria-hidden="true"></i></span>
         <span>Videos</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon is-small"><i class="fas fa-file-alt"></i></span>
+        <span class="icon is-small"><i class="fas fa-file-text-o" aria-hidden="true"></i></span>
         <span>Documents</span>
       </a>
     </li>
@@ -318,25 +318,25 @@ doc-subtab: tabs
   <ul>
     <li class="is-active">
       <a>
-        <span class="icon"><i class="fas fa-image"></i></span>
+        <span class="icon"><i class="fas fa-image" aria-hidden="true"></i></span>
         <span>Pictures</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon"><i class="fas fa-music"></i></span>
+        <span class="icon"><i class="fas fa-music" aria-hidden="true"></i></span>
         <span>Music</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon"><i class="fas fa-film"></i></span>
+        <span class="icon"><i class="fas fa-film" aria-hidden="true"></i></span>
         <span>Videos</span>
       </a>
     </li>
     <li>
       <a>
-        <span class="icon"><i class="fas fa-file-alt"></i></span>
+        <span class="icon"><i class="fas fa-file-text-o" aria-hidden="true"></i></span>
         <span>Documents</span>
       </a>
     </li>
