--- a/docs/_includes/native.html
+++ b/docs/_includes/native.html
@@ -1,6 +1,6 @@
 <script src="{{ site.url }}/vendor/native.js"></script>
 <script>
-  _native.init("CKYIT2QJ", {
+  _native.init("CKYI42QI", {
     targetClass: 'native-js',
     fallback: `<a href="https://jgthms.com/css-in-44-minutes-ebook" class="native-flex" target="_blank">
       <style>
