Update default colors

--- a/docs/_includes/native.html
+++ b/docs/_includes/native.html
@@ -5,7 +5,7 @@
     fallback: `<a href="https://jgthms.com/css-in-44-minutes-ebook" class="native-flex" target="_blank">
       <style>
         .native-js {
-          background: linear-gradient(-30deg, #DA3925E5, #DA3925E5 45%, #DA3925 45%) #fff;
+          background: linear-gradient(-30deg, #4f38a4, #a244bc 45%, #4f38a4 45%) #4f38a4;
         }
 
         .native-details {
@@ -18,12 +18,12 @@
 
         .native-cta {
           color: #FFFFFF;
-          background-color: #626469;
+          background-color: #3bb76d;
         }
 
         .native-cta:hover {
           color: #native_cta_color_hover;
-          background-color: #626469;
+          background-color: #3bb76d;
         }
       </style>
       <div class="native-main">
