--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -13773,19 +13773,9 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 
 .native-js {
   display: none;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 760px;
+  font-size: 1rem;
   opacity: 0;
   visibility: hidden;
-}
-
-.native-js:not(:first-child) {
-  margin-top: 3rem;
-}
-
-.native-js:not(:last-child) {
-  margin-bottom: 3rem;
 }
 
 .native-show {
@@ -13801,10 +13791,10 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 1.5rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 2em;
   text-decoration: none;
 }
 
@@ -13831,16 +13821,17 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
   -ms-flex-negative: 1;
       flex-shrink: 1;
+  max-width: 640px;
 }
 
 .native-company {
   display: block;
-  font-size: 10px;
+  font-size: 0.625em;
   letter-spacing: 2px;
   margin-bottom: 4px;
   text-transform: uppercase;
@@ -13861,7 +13852,7 @@ html.route-index .hero.is-primary a.column:hover .title strong {
           flex-grow: 0;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  font-size: 0.75rem;
+  font-size: 0.75em;
   font-weight: 400;
   padding: 0.75em 1em;
   text-transform: uppercase;
@@ -13888,10 +13879,10 @@ html.route-index .hero.is-primary a.column:hover .title strong {
     text-align: center;
   }
   .native-main {
-    margin-bottom: 2rem;
+    margin-bottom: 2em;
   }
   .native-details {
-    margin: 1rem;
+    margin: 1em;
   }
 }
 
@@ -13900,16 +13891,23 @@ html.route-index .hero.is-primary a.column:hover .title strong {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    padding: 4em;
     text-align: left;
   }
   .native-main {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-right: 2rem;
+    margin-right: 2em;
   }
   .native-details {
-    margin-left: 2rem;
+    margin-left: 2em;
+  }
+}
+
+@media screen and (min-width: 1216px) {
+  .native-js {
+    font-size: 1.25rem;
   }
 }
 
